--- a/formapp/form.html
+++ b/formapp/form.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Submit Your Info</h1>
-    <form method="POST" action="/submit">
+    <form method="POST" action="api/submit">
         <label>Name:</label><br>
         <input type="text" name="name" required><br><br>
 
